Linux/ipt.v4
# Web CC
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGGING - [0:0]
##### INPUT ####

-A INPUT -i lo -j ACCEPT

# ICMP
-A INPUT -p icmp -m icmp --icmp-type 0 -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT -m comment --comment "allow ICMP: echo-reply"
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT -m comment --comment "allow ICMP: echo-request"

# HTTP
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT -m comment --comment "Allow HTTP"
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT -m comment --comment "Allow HTTPS"

#  DNS
-A INPUT -s 8.8.8.8/32 -p udp -m udp --sport 53 -m state --state NEW -j ACCEPT -m comment --comment "allow DNS Reply"
-A INPUT -s 8.8.8.8/32 -p tcp -m tcp --sport 53 -m state --state NEW -j ACCEPT -m comment --comment "TCP DNS Reply"

-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT -m comment --comment "allow DNS: domain"
-A INPUT -p udp -m udp --dport 53 -j ACCEPT -m comment --comment "allow DNS: domain"

# LOG 
-A INPUT -j LOG 
-A INPUT -j LOG --log-prefix "[IPTABLES-IN-DROP]:" --log-level 6
-A INPUT -j DROP


#### OUTPUT ####
-A OUTPUT -o lo -j ACCEPT

# ICMP
-A OUTPUT -p icmp -m icmp --icmp-type 0 -m state --state ESTABLISHED,RELATED -j ACCEPT -m comment --comment "allow ICMP: echo-reply"
-A OUTPUT -p icmp -m icmp --icmp-type 8 -m state --state ESTABLISHED,RELATED -j ACCEPT -m comment --comment "allow ICMP: echo-request"

# HTTP OUT
-A OUTPUT -o ens3 -p tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT -m comment --comment "HTTP OUT"
-A OUTPUT -o ens3 -p tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT -m comment --comment "HTTPS OUT"

# DNS OUT
-A OUTPUT -d 8.8.8.8/32 -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 8.8.8.8/32 -p tcp -m tcp --dport 53 -j ACCEPT

# LOG
-A OUTPUT -j LOG --log-prefix "[IPTABLES-OUT-DROP]:" --log-level 6
-A OUTPUT -j DROP
COMMIT
# CC
